update login page , home page , payemt and admin panel

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,23 +24,17 @@
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@drawable/backgroundhome">
+                android:background="@drawable/topwhite">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
-                    android:background="@drawable/back"
+                    android:background="@drawable/hhhhhhhhhhhhhh"
                     android:gravity="center"
                     android:orientation="vertical"
 
 
                     >
-
-                    <ImageView
-                        android:layout_width="224dp"
-                        android:layout_height="119dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/homeback" />
 
                     <TextView
                         android:layout_width="wrap_content"
