--- a/app/src/main/res/layout/activity_addddmiiiinnn.xml
+++ b/app/src/main/res/layout/activity_addddmiiiinnn.xml
@@ -5,27 +5,27 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundhome"
+    android:background="@drawable/hotelnameback"
     tools:context=".Addddmiiiinnn">
 
     <TextView
         android:id="@+id/textView40"
-        android:layout_width="275dp"
-        android:layout_height="89dp"
-        android:layout_marginTop="112dp"
+        android:layout_width="209dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="92dp"
         android:text="Welcome"
         android:textColor="#9C27B0"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.757"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="409dp"
         android:layout_height="480dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView40"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView40">
 
         <Button
             android:id="@+id/cntbtn"
@@ -33,10 +33,10 @@
             android:layout_height="50dp"
             android:layout_marginTop="56dp"
             android:layout_marginEnd="16dp"
-            android:onClick="sendMessage"
             android:background="@drawable/button"
+            android:onClick="sendMessage"
             android:text="View Messages"
-            android:textColor="#800F0F0F"
+            android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.595"
@@ -50,7 +50,7 @@
             android:layout_marginTop="48dp"
             android:background="@drawable/button"
             android:text="ADD DETAILS"
-            android:textColor="#80030303"
+            android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -64,7 +64,7 @@
             android:layout_marginTop="44dp"
             android:background="@drawable/button"
             android:text="PAYMENT"
-            android:textColor="#80070707"
+            android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -78,7 +78,7 @@
             android:layout_marginTop="48dp"
             android:background="@drawable/button"
             android:text="MAKE RESERVATION"
-            android:textColor="#800A0A0A"
+            android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
