--- a/app/src/main/res/layout/checkavailability2.xml
+++ b/app/src/main/res/layout/checkavailability2.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".checkavailability2"
-    android:background="@drawable/ww">
+    android:background="@drawable/backgroundhome"
+    tools:context=".checkavailability2">
 
     <EditText
         android:id="@+id/CnoID"
