validations for phone number

--- a/app/src/main/res/layout/activity_payment2.xml
+++ b/app/src/main/res/layout/activity_payment2.xml
@@ -51,7 +51,7 @@
         android:background="@drawable/inputfield"
         android:ems="10"
         android:hint="Card Number"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textColorHint="@color/Darkblue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -85,7 +85,7 @@
         android:background="@drawable/inputfield"
         android:ems="10"
         android:hint="Expiration date"
-        android:inputType="textPersonName"
+        android:inputType="datetime"
         android:textColorHint="@color/Darkblue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
