--- a/app/src/main/res/layout/contactus3.xml
+++ b/app/src/main/res/layout/contactus3.xml
@@ -24,17 +24,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.067" />
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="296dp"
-        android:layout_height="254dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/images1" />
+    <ListView
+        android:id="@+id/contactListview"
+        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
