--- a/app/src/main/res/layout/contactus1.xml
+++ b/app/src/main/res/layout/contactus1.xml
@@ -54,7 +54,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Email"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#1A1919"
         android:textColorHighlight="#3F51B5"
@@ -74,7 +74,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Phone"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#0F0E0E"
         android:textColorHint="#99070707"
@@ -117,8 +117,8 @@
 
     <Button
         android:id="@+id/insertbtn"
-        android:layout_width="162dp"
-        android:layout_height="53dp"
+        android:layout_width="156dp"
+        android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -126,12 +126,26 @@
         android:background="@drawable/button"
         android:onClick="sendData"
         android:text="@string/submit"
-        android:textSize="24sp"
         android:textColor="@color/white"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.158"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contactMessage" />
+
+    <Button
+        android:id="@+id/msgupd"
+        android:layout_width="138dp"
+        android:layout_height="44dp"
+        android:background="@drawable/button"
+        android:onClick="opencintactus2"
+        android:text="Update Message"
+        android:textColor="#FDFFFFFF"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/insertbtn"
         app:layout_constraintTop_toBottomOf="@+id/contactMessage" />
 
 
