--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -154,7 +154,8 @@
                                     android:id="@+id/bookNowBtn6"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:background="@drawable/border" />
+                                    android:background="@drawable/border"
+                                    android:onClick="room" />
 
                             </RelativeLayout>
 
