--- a/app/src/main/res/layout/activity_makereservationadmin.xml
+++ b/app/src/main/res/layout/activity_makereservationadmin.xml
@@ -8,7 +8,7 @@
     tools:context=".Makereservationadmin">
 
     <ListView
-        android:id="@+id/makereservationListview"
+        android:id="@+id/ReservationListView"
         android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
