--- a/app/src/main/res/layout/contactview.xml
+++ b/app/src/main/res/layout/contactview.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -11,27 +13,28 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Feedback ID:"/>
+            android:text="CONTACT NAME:"
+            android:textColor="#030303"
+            android:textSize="14sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Student ID: "/>
+            android:text="CONTACT EMAIL: "
+            android:textColor="#070707" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Student Name:         "/>
+            android:text="CONTACT PHONE:         "
+            android:textColor="#090808" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Subject: "/>
+            android:text="CONTACT MESSAGE: "
+            android:textColor="#090808" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Feedback: "/>
     </LinearLayout>
 
     <LinearLayout
