--- a/app/src/main/res/layout/activity_payment2.xml
+++ b/app/src/main/res/layout/activity_payment2.xml
@@ -47,8 +47,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:autofillHints=""
-        android:background="@drawable/inputfield"
+        android:autofillHints="" android:background="@drawable/inputfield"
+
         android:ems="10"
         android:hint="Card Number"
         android:inputType="number"
