--- a/app/src/main/res/layout/activity_view_add_details.xml
+++ b/app/src/main/res/layout/activity_view_add_details.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundhome"
     tools:context=".viewAddDetails">
+
 
     <ListView
         android:id="@+id/adddetailslistview"
-        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_marginTop="100dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
