--- a/app/src/main/res/layout/adddetails1.xml
+++ b/app/src/main/res/layout/adddetails1.xml
@@ -22,7 +22,9 @@
         app:layout_constraintHorizontal_bias="0.894"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.392" />
+        app:layout_constraintVertical_bias="0.392"
+        android:background="@drawable/inputfield"
+        />
 
     <EditText
         android:id="@+id/rt"
@@ -38,7 +40,8 @@
         app:layout_constraintHorizontal_bias="0.889"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.268" />
+        app:layout_constraintVertical_bias="0.268"
+        android:background="@drawable/inputfield"/>
 
     <EditText
         android:id="@+id/CvcID"
@@ -53,7 +56,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintVertical_bias="0.49"
+        android:background="@drawable/inputfield"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -104,7 +108,8 @@
         app:layout_constraintHorizontal_bias="0.894"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.616" />
+        app:layout_constraintVertical_bias="0.616"
+        android:background="@drawable/inputfield"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -136,7 +141,8 @@
         app:layout_constraintHorizontal_bias="0.849"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.729" />
+        app:layout_constraintVertical_bias="0.729"
+        android:background="@drawable/inputfield"/>
 
     <EditText
         android:id="@+id/CvcID"
@@ -152,7 +158,8 @@
         app:layout_constraintHorizontal_bias="0.849"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.826" />
+        app:layout_constraintVertical_bias="0.826"
+        android:background="@drawable/inputfield"/>
 
     <TextView
         android:id="@+id/textView5"
