--- a/app/src/main/res/layout/activity_payment2.xml
+++ b/app/src/main/res/layout/activity_payment2.xml
@@ -138,7 +138,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Need Help?"
-        android:textColor="@color/purpel"
+        android:textColor="@color/gold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -154,7 +154,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:text="Nice to see you Again!"
-        android:textColor="@color/purpel"
+        android:textColor="@color/gold"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +169,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Fill Your Payment Details"
-        android:textColor="@color/purpel"
+        android:textColor="@color/gold"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
