--- a/app/src/main/res/layout/activity_payment3.xml
+++ b/app/src/main/res/layout/activity_payment3.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/Register"
-        android:textColor="#8B1FF8"
+        android:textColor="#996515"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -151,7 +151,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="40dp"
         android:text="Need Help?"
-        android:textColor="@color/purpel"
+        android:textColor="@color/gold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.527"
@@ -167,7 +167,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
         android:text="Nice to see you Again!"
-        android:textColor="@color/purpel"
+        android:textColor="@color/gold"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -181,7 +181,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:text="Payment Details"
-        android:textColor="@color/purpel"
+        android:textColor="@color/gold"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
