--- a/app/src/main/res/layout/activity_payment_account.xml
+++ b/app/src/main/res/layout/activity_payment_account.xml
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/myac" />
+        app:srcCompat="@drawable/myac"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/cno"
@@ -25,7 +26,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-black"
-        android:hint="Card number"
+        android:hint="@string/card_number"
         android:textColor="#0C0808"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.926"
@@ -37,7 +38,7 @@
         android:layout_width="102dp"
         android:layout_height="33dp"
         android:fontFamily="sans-serif-black"
-        android:hint="Name"
+        android:hint="@string/name1"
         android:textColor="#0A0505"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +52,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-black"
-        android:hint="CVC"
+        android:hint="@string/cvc1"
         android:textColor="#0C0707"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.926"
@@ -64,7 +65,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-black"
-        android:hint="Experitation Date"
+        android:hint="@string/experitation_date1"
         android:textColor="#0E0707"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,8 +79,8 @@
         android:layout_width="224dp"
         android:layout_height="40dp"
         android:layout_marginTop="56dp"
-        android:text="Welcome To Paradise Hotel"
-        android:textColor="#BC1FF9"
+        android:text="@string/welcome_to_paradise_hotel1"
+        android:textColor="#996515"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.556"
@@ -92,7 +93,7 @@
         android:layout_height="40dp"
         android:background="@drawable/button"
         android:onClick="pay2"
-        android:text="Change Your Details"
+        android:text="@string/change_your_details1"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +108,7 @@
         android:layout_height="22dp"
         android:layout_marginTop="72dp"
         android:fontFamily="sans-serif-black"
-        android:text="Registration ID"
+        android:text="@string/registration_id1"
         android:textColor="#090606"
         app:layout_constraintEnd_toStartOf="@+id/rid"
         app:layout_constraintHorizontal_bias="0.472"
@@ -120,7 +121,7 @@
         android:layout_height="23dp"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-black"
-        android:text="Card Number"
+        android:text="@string/card_number1"
         android:textColor="#0A0303"
         app:layout_constraintEnd_toStartOf="@+id/cno"
         app:layout_constraintHorizontal_bias="0.45"
@@ -133,7 +134,7 @@
         android:layout_height="19dp"
         android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-black"
-        android:text="CVC"
+        android:text="@string/cvc1"
         android:textColor="#0C0606"
         app:layout_constraintEnd_toStartOf="@+id/Cvcd"
         app:layout_constraintHorizontal_bias="0.405"
@@ -146,7 +147,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="28dp"
         android:fontFamily="sans-serif-black"
-        android:text="Ex Date"
+        android:text="@string/ex_date1"
         android:textColor="#0A0505"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dd"
@@ -163,18 +164,19 @@
         android:layout_marginEnd="28dp"
         android:background="@drawable/inputfield"
         android:ems="10"
-        android:hint="Register ID"
+        android:hint="@string/register_id"
         android:inputType="textPersonName"
         android:textColorHint="@color/Darkblue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView35" />
+        app:layout_constraintTop_toBottomOf="@+id/textView35"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/button10"
         android:layout_width="49dp"
         android:layout_height="29dp"
         android:background="@drawable/button"
-        android:text="*"
+        android:text="@string/button55"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
