--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="50sp"/>
-    <solid android:color="@color/purpel"/>
+    <solid android:color="@color/gold"/>
 
 </shape>
