--- a/app/src/main/res/layout/makeresrvation1.xml
+++ b/app/src/main/res/layout/makeresrvation1.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/purpel"
+        android:background="@color/gold"
         android:text="@string/make_reservation"
         android:textAlignment="center"
         android:textColor="#FDFBFB"
